<resources>
    <string name="app_name">ToDo</string>
    <string name="log_in">Войти</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_surname">Фамилия пользователя</string>
    <string name="nickname">Ник</string>
    <string name="user">Пользователь</string>
    <string name="admin">Админ</string>
    <string name="do_register">Зарегистрировать</string>
    <string name="exit">Выход</string>
    <string name="access_denied">Неправильные e-mail или пароль!</string>
    <string name="register_new_user">Регистрация пользователя</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="email_exist">Пользователь с этим адресом электронной почты существует!</string>
    <string name="nickname_exist">Ник занят! Придумайте другой!</string>
    <string name="enter_email">Введите e-mail!</string>
    <string name="password_reset">Пиьсмо со ссылкой сброса пароля отправлено вам на почту.</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="folder_creating">Создание папки</string>
    <string name="add_member">Добавить участника</string>
    <string name="folder_name">Название папки</string>
    <string name="search_member">Поиск участников</string>
    <string name="confirmation">Подтверждение</string>
    <string name="cancel">Отмена</string>
    <string name="members">Участники</string>
    <string name="in_process">В процессе</string>
    <string name="done">Готово</string>
    <string name="all">Все</string>
    <string name="edit">Редактировать</string>
    <string name="task_addition">Создание задачи</string>
    <string name="task_name">Название задачи</string>
    <string name="new_sub_task">Новая подзадача</string>
    <string name="description">Описание</string>
    <string name="attach_file">Добавить файл</string>
    <string name="notification_switch_on">Включить уведомление</string>
    <string name="notification_date">Дата уведомления</string>
    <string name="notification_text">Текст уведомления</string>
    <string name="task_details">Детали задачи</string>
</resources>
